src/styles/partials/_base.scss
/* ... */
img {
  max-width: 100%;
  height: auto;
}

.img-fullwidth {
  width: 100%;
  display: block;
}

hr {
  background: $border-default-light;
  border: 0px;
  display: block;
  clear: both;
  height: 2px;
  margin: 40px 0;
}

//------------------------------------------------
//------------------------------------------------
//------------------------------------------------
// MODULE: PANEL
.panel-full {
  width: 100%;
  position: relative;
  line-height: 1.5;

  .heading-primary {
	 margin: 0.2em 0;
  }

  h2 {
  //  margin: 0.2em 0;
  }

  .ul-default {
    margin-bottom: 0;

    li {
      padding-bottom: $base-spacing * 1.5;
    }
  }
}

.panel-fullwidth-content {
  transition: all 1s ease-in;
  padding: 0 $base-spacing;

  h2 {
    border-bottom: 0;
    padding: 0;
    margin: 0 0 0.2em 0;
  }

}

.panel-bg-red {
  background-color: $red;

  .ul-default {
    li {
      &:before {
        color: inherit;
      }
    }
  }
}

.panel-bg-pattern {
  background-image: url('../img/bg-pixel@2x.png');
  background-repeat: repeat;
  background-size: 10%;
}

.panel-bg-solo {
  background-color: #f0274e;
  background-image: url('http://placehold.it/250x250');
  background-repeat: no-repeat;
  background-position: center center;
}

.panel-bg-solo-full {
//  background-image: url(''); //add background image via an additional class
  background-repeat: no-repeat;
  background-size: cover;
}

.panel-overlap {
  margin-top: $base-spacing-lg * 2;
}

.panel-bio {
  text-align: center;
  @extend %text--small;
  margin: $base-spacing 0 $base-spacing-lg * 1.5;
}

.overlap-top-block {
  position: absolute;
  top: -45px;
  left: 0;
  right: 0;
  margin: 0 auto;
}

.panel-overlap-content {
  padding: 60px 0 30px;
}

.panel-content-section {
  @extend %grid-child;
}


/* Module: Panel: Project specific images */

.project-into {
  .project-device-panel {
    background-image: url("../img/projects/into/into-panel1-bg@2x.jpg");
  }
}

.project-valuate {
  .panel-overlap-valuate {
    background-color: #363636;
  }

  .panel-overlap-valuate-bg {
    background-image: url("../img/projects/valuate/valuate-testimonial-bg@2x.png");
    background-repeat: no-repeat;
    background-size: 100% auto;
  }
}

.project-stp {
  .panel-overlap-stp {
    background-color: #61bb8a;
  }

  .panel-overlap-stp-bg {
    background-image: url("../img/projects/stp/stp-testimonial-bg@2x.png");
    background-repeat: no-repeat;
    background-size: 30% auto;
    background-position: center;
  }
}

.project-mh {
  .panel-overlap-mh {
    background-color: #02243F;
  }

  .panel-overlap-mh-bg {
    background-image: url("../img/projects/mh/mh-testimonial-bg@2x.png");
    background-repeat: no-repeat;
    background-size: 30% auto;
    background-position: center;
    background-color: #02243F;
  }
}

.project-pivot {
  .project-panel-each {

    p:first-of-type {
      margin-top: 0;
    }
  }

  .panel-overlap-pivot {
    background-color: #61a028;
  }

  .panel-overlap-pivot-bg {
    background-image: url("../img/projects/pivot/pivot-testimonial-bg@2x.png");
    background-repeat: no-repeat;
    background-size: 100% auto;
  }
}

.project-uua {
  .project-device-panel {
    background-image: url("../img/projects/uua/uua-panel1-bg@2x.jpg");
  }

  .panel-overlap-uua {
    background-color: #f0274e;
  }

  .panel-overlap-uua-bg {
    background-image: url("../img/projects/uua/uua-testimonial-bg@2x.png");
    background-repeat: no-repeat;
    background-size: 25% auto;
    background-position: center;
  }
}

.project-hrc {
  .project-device-panel {
    background-image: url("../img/projects/hrc/hrc-panel1-bg@2x.jpg");
  }
}

.project-bmp {
  .project-panel-1 {
    background-color: red;
  }
}

.project-svg {

  .project-panel-1 {
    background-image: url("../img/projects/seventh-generation/seventh-generation-and-colab-in-burlington.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 400px;
  }

  .panel-overlap-svg {
    background: #3fae2a url('../img/bg-pixel@2x.png') 0 0 repeat;
    background-size: 10%;

    img {
      border: 1px solid $gray-light;
    }
  }
}

/* End Module: Panel: Project specific images */

//------------------------------------------------
// MODULE: PIXELATE ON HOVER

.img-pixelate-hover {
  display: block !important; //important required to override js plugin, unfortunately
}

.img-pixelate-content {
  position: absolute;
  left: 0;
  right: 0;
  padding: $base-spacing 0;
  @extend %dead-center;
  margin-top: 29px;
  transition: all 0.2s ease-in;

  .button--brand-outline {
		margin-top: $base-spacing-lg;
    visibility: hidden;
    transform: translateY(50%);
    font-weight: 700;
    opacity: 0;
    transition: all 0.45s ease-in-out;
  }
}

.img-pixelate-heading {
  @extend %text--small;
  line-height: 1.5;
  margin-bottom: $base-spacing-sm;
}

.img-pixelate-tagline {
  font-family: $lubalin-bold;
  @extend %text--large;
	line-height: 1.3;
}

.img-pixelate-meta {
  padding: 0 ($base-spacing * 2);
}
/* ... */

